--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ p {
     margin: 0;
 }
 
+h3 {
+    color:#fff;
+}
+
 .img {
     width: 260px;
     height: 195px;
@@ -123,6 +127,7 @@ p {
     padding: 24px 0;
     text-align: center;
     text-transform: capitalize;
+    background-image: url("imgs/light.jpg");
 }
 
 .option {
