--- a/style.css
+++ b/style.css
@@ -1,7 +1,34 @@
+* {
+    font-family: AvenirLT, sans-serif;
+    color: #000;
+    font-size: 1em;
+}
+
 body {
-    background-image: url(http://fyve.tntsj.com/images/8371-1.jpg);
+    background-color: #000;
     background-attachment: fixed;
-    margin: 100px;
+    margin-right: 100px;
+    margin-left: 0px;
+
+}
+
+@media screen and (min-width: 1024px) {
+    .side-bar {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding-top: 69px;
+    }
+
+}
+
+.side-bar {
+    position: fixed;
+    top: 0;
+    width: 130px;
+    height: 100vh;
+    background: #313131;
+    z-index: 7;
 }
 
 /* The Modal (background) */
@@ -166,10 +193,8 @@ label {padding-bottom:10px;}
         width: auto;
     }
 
-    h2{
+    h2 { 
         font-size: 1.5em;
         width: auto;
     }
-
-
 }
