--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*Styling origionally adapted from: https://quizbuzzquiz.herokuapp.com*/
+
 * {
     font-family: AvenirLT, sans-serif;
     color: #000;
@@ -29,22 +31,20 @@ body {
     z-index: 7;
 }
 
-/* The Modal (background) */
+/* modal adapted from: https://www.w3schools.com/howto/howto_css_modals.asp*/ 
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    padding-top: 100px; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    background-color: rgba(0,0,0,0.4); 
 }
   
-  /* Modal Content */
+/* modal adapted from: https://www.w3schools.com/howto/howto_css_modals.asp*/ 
 .modal-content {
     background-color: #fefefe;
     margin: auto;
